
2009-01-28
Create Solution
Element with tests
Element Equals and Hash
Element Multiply

2009-01-30
IGroup
BaseGroup with equality
GeneratedGroup
SymmetricGroup
CompleteGroup
Multiply of Groups
Elements closure
Groups closure
Subgroups of a Group

2009-01-31
Cyclic groups of a Group
Normal subgroups of a Group (WIP)
Two groups are isomorphic? (WIP)

2009-09-13
IElement abstraction and refactoring
OperationTable with Tests

2010-03-14
Renaming test methods

2010-10-03
Fixing GroupUtilities.IsNormalSubgroup bug
Change Element.GetHashCode and Element.Equals so identities/elements of diff size are equals if
	the last elements are not swaped (values[k] == k)
New tests for all that
Pending: AreIsomorphic complete implementation
GroupUtilities.AreIsomorphic with tests (WIP)

2010-12-25
GeneratedGroup inherits from CompleteGroup
ElementsUtilities.ElementsUnion now use Linq
CompleteGroup constructor now admits repeated elements, discarded using Linq Distinct()
Test for BaseGroup.GetHashCode()
NamedElement with tests
OperationTable with named elements with tests
OperationTable.GetCompatibleOperationTable with tests
